Update clearance level and file name in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <input id="code" placeholder="Access code" aria-label="Access code" />
             <a href="#" class="btn" onclick="unlock(event)">Unlock</a>
           </div>
-          <div class="stamp">CLEARANCE LEVEL: TMI &nbsp;•&nbsp; FILE: TAROT_PROTOCOL_Δ7</div>
+          <div class="stamp">CLEARANCE LEVEL: SCI &nbsp;•&nbsp; FILE: P is for_PROTOCOL_Δ7</div>
         </div>
       </div>
       <div class="meta">Don’t have the code? Request access: <a href="mailto:evans.jimw@gmail.com">evans.jimw@gmail.com</a></div>
