Update title from 'Puscifer Tarot' to 'PU5C1VER5E'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Puscifer Tarot — Transmission</title>
+  <title>PU5C1VER5E — Transmission</title>
   <style>
     :root{
       --bg:#0a0d10; --fg:#e8f9ff; --accent:#6cf0ff; --muted:#9aa4ad; --red:#ff4d5a; --green:#9dffb3;
