Refactor HTML and CSS for improved readability

--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PU5C1VER5E — Transmission</title>
   <style>
-    :root{
-      --bg:#0a0d10; --fg:#e8f9ff; --accent:#6cf0ff; --muted:#9aa4ad; --red:#ff4d5a; --green:#9dffb3;
-    }
-    html,body{height:100%;}
+    :root{ --bg:#0a0d10; --fg:#e8f9ff; --accent:#6cf0ff; --muted:#9aa4ad; --red:#ff4d5a; --green:#9dffb3; }
+    html,body{height:100%}
     body{
-      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      color:var(--fg); background:radial-gradient(100% 140% at 50% 0%, #121820 0%, #07090c 60%, #050608 100%);
+      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
+      color:var(--fg);
+      background:radial-gradient(100% 140% at 50% 0%, #121820 0%, #07090c 60%, #050608 100%);
       display:flex; align-items:center; justify-content:center; overflow-x:hidden;
     }
-    /* CRT vibe */
-    .crt:before{content:""; position:fixed; inset:0; pointer-events:none; background:repeating-linear-gradient(0deg, rgba(255,255,255,0.05) 0px, rgba(255,255,255,0.05) 1px, transparent 2px); mix-blend-mode:overlay; opacity:.12}
-    .crt:after{content:""; position:fixed; inset:0; pointer-events:none; background:radial-gradient(60% 40% at 50% 120%, rgba(108,240,255,.15), transparent 60%);}    
+    .crt:before{content:""; position:fixed; inset:0; pointer-events:none;
+      background:repeating-linear-gradient(0deg, rgba(255,255,255,.05) 0 1px, transparent 2px);
+      mix-blend-mode:overlay; opacity:.12}
+    .crt:after{content:""; position:fixed; inset:0; pointer-events:none;
+      background:radial-gradient(60% 40% at 50% 120%, rgba(108,240,255,.15), transparent 60%)}
     .wrap{max-width:960px; width:100%; padding:32px 20px; text-align:center}
-    h1{font-weight:800; letter-spacing:.06em; text-transform:uppercase; font-size:clamp(28px,6vw,64px); margin:.1em 0 .2em;}
-    .brand{display:inline-block; padding:.18em .55em; border:1px solid rgba(108,240,255,.5); border-radius:12px; box-shadow:0 0 0 2px rgba(108,240,255,.15) inset, 0 0 24px rgba(108,240,255,.25);
-      background:linear-gradient(180deg, rgba(108,240,255,.2), rgba(108,240,255,.05)); backdrop-filter: blur(2px);}
+    h1{font-weight:800; letter-spacing:.06em; text-transform:uppercase; font-size:clamp(28px,6vw,64px); margin:.1em 0 .2em}
+    .brand{display:inline-block; padding:.18em .55em; border:1px solid rgba(108,240,255,.5); border-radius:12px;
+      box-shadow:0 0 0 2px rgba(108,240,255,.15) inset, 0 0 24px rgba(108,240,255,.25);
+      background:linear-gradient(180deg, rgba(108,240,255,.2), rgba(108,240,255,.05)); backdrop-filter:blur(2px)}
     .subtitle{max-width:46ch; margin:10px auto 22px; color:var(--muted); font-size:clamp(14px,2.8vw,18px); line-height:1.45}
     .panel{border:1px solid rgba(255,255,255,.08); border-radius:16px; padding:16px; background:rgba(255,255,255,.03); box-shadow:0 12px 40px rgba(0,0,0,.35)}
     .video{width:100%; aspect-ratio:16/9; border-radius:12px; background:#000; display:grid; place-items:center; overflow:hidden}
@@ -30,14 +32,15 @@
     .btn.ghost{background:transparent; color:var(--accent); border:1px solid rgba(108,240,255,.5)}
     .gate{margin:22px auto 10px; display:flex; gap:8px; justify-content:center}
     .gate input{background:#0e1319; border:1px solid rgba(108,240,255,.35); color:var(--fg); border-radius:10px; padding:10px 12px; min-width:180px}
-    .stamp{margin-top:14px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; letter-spacing:.12em; color:#8bdcf0; opacity:.8}
+    .stamp{margin-top:14px; font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace; letter-spacing:.12em; color:#8bdcf0; opacity:.8}
     footer{margin-top:22px; font-size:12px; color:#8ea2b3}
+    .err{color:var(--red); font-size:12px; margin-top:6px; min-height:16px}
   </style>
 </head>
 <body class="crt">
   <div class="wrap">
     <div class="brand">PUSCIFER TAROT</div>
-    <h1>Transmission</h1>
+    <h1>TRANSMISSION</h1>
     <p class="subtitle">A Psychospiritual Journey Through the Pusciverse</p>
 
     <div class="panel" id="panel">
@@ -45,10 +48,11 @@
         <div id="locked">
           <p class="muted">Private sizzle locked.<br/>Enter access code to view.</p>
           <div class="gate">
-            <input id="code" placeholder="Access code" aria-label="Access code" />
+            <input id="code" placeholder="Access code" aria-label="Access code" autocomplete="one-time-code" />
             <a href="#" class="btn" onclick="unlock(event)">Unlock</a>
           </div>
-          <div class="stamp">CLEARANCE LEVEL: SCI &nbsp;•&nbsp; FILE: P is for_PROTOCOL_Δ7</div>
+          <div id="err" class="err"></div>
+          <div class="stamp">CLEARANCE LEVEL: TMI &nbsp;•&nbsp; FILE: TAROT_PROTOCOL_Δ7</div>
         </div>
       </div>
       <div class="meta">Don’t have the code? Request access: <a href="mailto:evans.jimw@gmail.com">evans.jimw@gmail.com</a></div>
@@ -60,19 +64,39 @@
   <script>
     // change this to your preferred password
     const PASS = "PROBE";
-    // change this to your hosted video URL when ready (Drive/YouTube/Vimeo)
-    const VIDEO_URL = "https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&autoplay=1";
+    // change this to your hosted video URL when ready
+    const VIDEO_URL = "https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&autoplay=1&playsinline=1&mute=1";
+
+    const codeInput = document.getElementById('code');
+    const err = document.getElementById('err');
+
+    // remember unlock
+    const KEY = "pusciver_unlock";
+    if (localStorage.getItem(KEY) === "1") injectVideo();
+
+    // autofocus + Enter to submit
+    codeInput.focus();
+    codeInput.addEventListener('keydown', e => {
+      if (e.key === 'Enter') unlock(e);
+    });
 
     function unlock(e){
       e.preventDefault();
-      const v = document.getElementById('code').value.trim();
-      if(v.toUpperCase() === PASS){
-        const shell = document.getElementById('videoShell');
-        shell.innerHTML = `<iframe src="${VIDEO_URL}" title="Puscifer Tarot — Sizzle" allow="autoplay; encrypted-media" allowfullscreen style="width:100%;height:100%;border:0;border-radius:12px;"></iframe>`;
+      const v = codeInput.value.trim();
+      if (v.toUpperCase() === PASS){
+        localStorage.setItem(KEY,"1");
+        injectVideo();
       } else {
-        alert('Access denied.');
+        err.textContent = "Access denied.";
+        setTimeout(()=> err.textContent = "", 2000);
       }
+    }
+
+    function injectVideo(){
+      const shell = document.getElementById('videoShell');
+      shell.innerHTML = `<iframe src="${VIDEO_URL}" title="Puscifer Tarot — Sizzle" allow="autoplay; encrypted-media; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:100%;border:0;border-radius:12px;"></iframe>`;
     }
   </script>
 </body>
 </html>
+
