Update brand and clearance level text in index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 </head>
 <body class="crt">
   <div class="wrap">
-    <div class="brand">PUSCIFER TAROT</div>
+    <div class="brand">PU5C1VER5E — Transmission</div>
     <h1>TRANSMISSION</h1>
-    <p class="subtitle">A Psychospiritual Journey Through the Pusciverse</p>
+    <p class="subtitle">A Psychospiritual Journey Through the Puscifer Mythos</p>
 
     <div class="panel" id="panel">
       <div class="video" id="videoShell">
@@ -52,7 +52,7 @@
             <a href="#" class="btn" onclick="unlock(event)">Unlock</a>
           </div>
           <div id="err" class="err"></div>
-          <div class="stamp">CLEARANCE LEVEL: TMI &nbsp;•&nbsp; FILE: TAROT_PROTOCOL_Δ7</div>
+          <div class="stamp">CLEARANCE LEVEL: SCI &nbsp;•&nbsp; FILE: T is for TAROT_PROJECT</div>
         </div>
       </div>
       <div class="meta">Don’t have the code? Request access: <a href="mailto:evans.jimw@gmail.com">evans.jimw@gmail.com</a></div>
@@ -71,7 +71,7 @@
     const err = document.getElementById('err');
 
     // remember unlock
-    const KEY = "pusciver_unlock";
+    const KEY = "puscifer_unlock";
     if (localStorage.getItem(KEY) === "1") injectVideo();
 
     // autofocus + Enter to submit
