Update title and headings in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PU5C1VER5E — Transmission</title>
+  <title>PU5C1VER5E</title>
   <style>
     :root{ --bg:#0a0d10; --fg:#e8f9ff; --accent:#6cf0ff; --muted:#9aa4ad; --red:#ff4d5a; --green:#9dffb3; }
     html,body{height:100%}
@@ -39,8 +39,8 @@
 </head>
 <body class="crt">
   <div class="wrap">
-    <div class="brand">PU5C1VER5E — Transmission</div>
-    <h1>TRANSMISSION</h1>
+    <div class="brand">PU5C1VER5E</div>
+    <h1>CLASSIFIED</h1>
     <p class="subtitle">A Psychospiritual Journey Through the Puscifer Mythos</p>
 
     <div class="panel" id="panel">
