--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     // change this to your preferred password
     const PASS = "PROBE";
     // change this to your hosted video URL when ready
-    const VIDEO_URL = "https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&autoplay=1&playsinline=1&mute=1";
+    const VIDEO_URL = <iframe src="https://player.vimeo.com/video/1128635365?context=Vimeo%5CController%5CApi%5CResources%5CVideoController.&h=5eb4fdcc47&s=71213198e714730f787521fea9efbd802c3508ec_1765227119" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>;
 
     const codeInput = document.getElementById('code');
     const err = document.getElementById('err');
