--- a/index.html
+++ b/index.html
@@ -70,43 +70,68 @@
   </div>
 
   <script>
-    // change this to your preferred password
-    const PASS = "PROBE";
-    // change this to your hosted video URL when ready
-  
-// change this to your hosted video URL when ready
-const VIDEO_URL = "https://player.vimeo.com/video/1128635365?autoplay=1&muted=1&title=0&byline=0&portrait=0";
+  // change this to your preferred password
+  const PASS = "PROBE";
 
-    const codeInput = document.getElementById('code');
-    const err = document.getElementById('err');
+  // INTRO video (your existing Vimeo cold open)
+  const INTRO_URL = "https://player.vimeo.com/video/1128635365?autoplay=1&muted=1&title=0&byline=0&portrait=0";
 
-    // remember unlock
-    const KEY = "puscifer_unlock";
-    if (localStorage.getItem(KEY) === "1") injectVideo();
+  // Where to go AFTER the intro finishes (card tease page or second video)
+  // 👉 Replace this with your real URL when ready
+  const CARD_TEASE_URL = "https://example.com/card-tease"; 
 
-    // autofocus + Enter to submit
-    codeInput.focus();
-    codeInput.addEventListener('keydown', e => {
-      if (e.key === 'Enter') unlock(e);
+  const codeInput = document.getElementById('code');
+  const err = document.getElementById('err');
+  const KEY = "puscifer_unlock";
+
+  // if already unlocked before, go straight to video
+  if (localStorage.getItem(KEY) === "1") injectVideo();
+
+  // autofocus + Enter to submit
+  codeInput.focus();
+  codeInput.addEventListener('keyup', e => {
+    if (e.key === 'Enter') {
+      unlock(e);
+    }
+  });
+
+  function unlock(e){
+    if (e) e.preventDefault();
+    const v = codeInput.value.trim();
+    if (v.toUpperCase() === PASS){
+      localStorage.setItem(KEY,"1");
+      injectVideo();
+    } else {
+      err.textContent = "Access denied.";
+      setTimeout(()=> err.textContent = "", 2000);
+    }
+  }
+
+  function injectVideo(){
+    const shell = document.getElementById('videoShell');
+
+    // drop in the INTRO video iframe
+    shell.innerHTML = `
+      <iframe
+        id="vimeoPlayer"
+        src="${INTRO_URL}"
+        title="Puscifer Tarot — Intro"
+        allow="autoplay; encrypted-media; fullscreen; picture-in-picture"
+        allowfullscreen
+        style="width:100%;height:100%;border:0;border-radius:12px;">
+      </iframe>
+    `;
+
+    const iframe = document.getElementById('vimeoPlayer');
+    const player = new Vimeo.Player(iframe);
+
+    // when the intro finishes, jump to the card tease
+    player.on('ended', () => {
+      window.location.href = CARD_TEASE_URL;
     });
+  }
+</script>
 
-    function unlock(e){
-      e.preventDefault();
-      const v = codeInput.value.trim();
-      if (v.toUpperCase() === PASS){
-        localStorage.setItem(KEY,"1");
-        injectVideo();
-      } else {
-        err.textContent = "Access denied.";
-        setTimeout(()=> err.textContent = "", 2000);
-      }
-    }
-
-    function injectVideo(){
-      const shell = document.getElementById('videoShell');
-      shell.innerHTML = `<iframe src="${VIDEO_URL}" title="Puscifer Tarot — Sizzle" allow="autoplay; encrypted-media; fullscreen; picture-in-picture" allowfullscreen style="width:100%;height:100%;border:0;border-radius:12px;"></iframe>`;
-    }
-  </script>
 </body>
 </html>
 
