--- a/index.html
+++ b/index.html
@@ -5,43 +5,194 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PU5C1VER5E</title>
   <style>
-    :root{ --bg:#0a0d10; --fg:#e8f9ff; --accent:#6cf0ff; --muted:#9aa4ad; --red:#ff4d5a; --green:#9dffb3; }
+    :root{
+      --bg:#0a0d10;
+      --fg:#e8f9ff;
+      --accent:#6cf0ff;
+      --muted:#9aa4ad;
+      --red:#ff4d5a;
+      --green:#9dffb3;
+    }
     html,body{height:100%}
     body{
-      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
+      margin:0;
+      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
       color:var(--fg);
       background:radial-gradient(100% 140% at 50% 0%, #121820 0%, #07090c 60%, #050608 100%);
-      display:flex; align-items:center; justify-content:center; overflow-x:hidden;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow-x:hidden;
     }
-    .crt:before{content:""; position:fixed; inset:0; pointer-events:none;
+    .crt:before{
+      content:"";
+      position:fixed;
+      inset:0;
+      pointer-events:none;
       background:repeating-linear-gradient(0deg, rgba(255,255,255,.05) 0 1px, transparent 2px);
-      mix-blend-mode:overlay; opacity:.12}
-    .crt:after{content:""; position:fixed; inset:0; pointer-events:none;
-      background:radial-gradient(60% 40% at 50% 120%, rgba(108,240,255,.15), transparent 60%)}
-    .wrap{max-width:960px; width:100%; padding:32px 20px; text-align:center}
-    h1{font-weight:800; letter-spacing:.06em; text-transform:uppercase; font-size:clamp(28px,6vw,64px); margin:.1em 0 .2em}
-    .brand{display:inline-block; padding:.18em .55em; border:1px solid rgba(108,240,255,.5); border-radius:12px;
+      mix-blend-mode:overlay;
+      opacity:.12;
+    }
+    .crt:after{
+      content:"";
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      background:radial-gradient(60% 40% at 50% 120%, rgba(108,240,255,.15), transparent 60%);
+    }
+    .wrap{
+      max-width:960px;
+      width:100%;
+      padding:32px 20px;
+      text-align:center;
+    }
+    h1{
+      font-weight:800;
+      letter-spacing:.06em;
+      text-transform:uppercase;
+      font-size:clamp(28px,6vw,64px);
+      margin:.1em 0 .2em;
+    }
+    .brand{
+      display:inline-block;
+      padding:.18em .55em;
+      border:1px solid rgba(108,240,255,.5);
+      border-radius:12px;
       box-shadow:0 0 0 2px rgba(108,240,255,.15) inset, 0 0 24px rgba(108,240,255,.25);
-      background:linear-gradient(180deg, rgba(108,240,255,.2), rgba(108,240,255,.05)); backdrop-filter:blur(2px)}
+      background:linear-gradient(180deg, rgba(108,240,255,.2), rgba(108,240,255,.05));
+      backdrop-filter:blur(2px);
+    }
     .subtitle{
       max-width:46ch;
       margin:10px auto 22px;
       color:var(--muted);
-      /* 👇 made this bigger */
       font-size:clamp(18px,3.2vw,24px);
       line-height:1.45;
     }
-    .panel{border:1px solid rgba(255,255,255,.08); border-radius:16px; padding:16px; background:rgba(255,255,255,.03); box-shadow:0 12px 40px rgba(0,0,0,.35)}
-    .video{width:100%; aspect-ratio:16/9; border-radius:12px; background:#000; display:grid; place-items:center; overflow:hidden}
+    .panel{
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:16px;
+      padding:16px;
+      background:rgba(255,255,255,.03);
+      box-shadow:0 12px 40px rgba(0,0,0,.35);
+      transition:transform .15s ease;
+    }
+    .video{
+      width:100%;
+      aspect-ratio:16/9;
+      border-radius:12px;
+      background:#000;
+      display:grid;
+      place-items:center;
+      overflow:hidden;
+    }
     .muted{opacity:.7}
-    .meta{font-size:12px; color:#a8b1ba; margin-top:8px}
-    .btn{display:inline-block; margin:18px 8px 0; padding:12px 16px; border-radius:999px; color:#041016; background:var(--accent); font-weight:700; letter-spacing:.02em; text-decoration:none}
-    .btn.ghost{background:transparent; color:var(--accent); border:1px solid rgba(108,240,255,.5)}
-    .gate{margin:22px auto 10px; display:flex; gap:8px; justify-content:center}
-    .gate input{background:#0e1319; border:1px solid rgba(108,240,255,.35); color:var(--fg); border-radius:10px; padding:10px 12px; min-width:180px}
-    .stamp{margin-top:14px; font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace; letter-spacing:.12em; color:#8bdcf0; opacity:.8}
-    footer{margin-top:22px; font-size:12px; color:#8ea2b3}
-    .err{color:var(--red); font-size:12px; margin-top:6px; min-height:16px}
+    .meta{
+      font-size:12px;
+      color:#a8b1ba;
+      margin-top:8px;
+    }
+    .btn{
+      display:inline-block;
+      margin:18px 8px 0;
+      padding:12px 16px;
+      border-radius:999px;
+      color:#041016;
+      background:var(--accent);
+      font-weight:700;
+      letter-spacing:.02em;
+      text-decoration:none;
+      border:none;
+      cursor:pointer;
+    }
+    .btn.ghost{
+      background:transparent;
+      color:var(--accent);
+      border:1px solid rgba(108,240,255,.5);
+    }
+    .gate{
+      margin:22px auto 10px;
+      display:flex;
+      gap:8px;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+    .gate input{
+      background:#0e1319;
+      border:1px solid rgba(108,240,255,.35);
+      color:var(--fg);
+      border-radius:10px;
+      padding:10px 12px;
+      min-width:180px;
+      caret-color:var(--accent);
+      outline:none;
+      box-shadow:0 0 0 0 rgba(108,240,255,.6);
+      transition:box-shadow .15s ease, border-color .15s ease;
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      letter-spacing:.18em;
+      text-transform:uppercase;
+    }
+    .gate input::placeholder{
+      letter-spacing:.12em;
+      text-transform:none;
+      color:rgba(154,164,173,.8);
+    }
+    .gate input:focus{
+      border-color:var(--accent);
+      box-shadow:0 0 0 1px rgba(108,240,255,.7), 0 0 12px rgba(108,240,255,.45);
+    }
+    .stamp{
+      margin-top:14px;
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      letter-spacing:.12em;
+      color:#8bdcf0;
+      opacity:.8;
+      font-size:11px;
+    }
+    footer{
+      margin-top:22px;
+      font-size:12px;
+      color:#8ea2b3;
+    }
+    .err{
+      color:var(--red);
+      font-size:12px;
+      margin-top:6px;
+      min-height:16px;
+    }
+    .log{
+      margin-top:4px;
+      min-height:16px;
+      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;
+      font-size:11px;
+      color:#8bdcf0;
+      opacity:.9;
+    }
+
+    /* shake on access denied */
+    @keyframes shake {
+      0%   { transform:translateX(0); }
+      20%  { transform:translateX(-4px); }
+      40%  { transform:translateX(4px); }
+      60%  { transform:translateX(-3px); }
+      80%  { transform:translateX(3px); }
+      100% { transform:translateX(0); }
+    }
+    .shake{
+      animation:shake .22s ease-out;
+    }
+
+    /* flash / glitch on unlock */
+    .flash{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      background:
+        radial-gradient(circle at 50% 50%, rgba(255,255,255,.45), transparent 60%);
+      mix-blend-mode:screen;
+      opacity:0;
+      transition:opacity .12s ease-out;
+    }
   </style>
 </head>
 <body class="crt">
@@ -53,86 +204,108 @@
     <div class="panel" id="panel">
       <div class="video" id="videoShell">
         <div id="locked">
-          <!-- 👇 new copy, no more "sizzle" -->
-          <p class="muted">This file is sealed under SCI protocol.<br/>Enter clearance code to proceed.</p>
+          <p class="muted">
+            This file is sealed under SCI protocol.<br/>
+            Enter clearance code to proceed.
+          </p>
           <div class="gate">
-            <input id="code" placeholder="Access code" aria-label="Access code" autocomplete="one-time-code" />
-            <a href="#" class="btn" onclick="unlock(event)">Unlock</a>
+            <input
+              id="code"
+              placeholder="Access code"
+              aria-label="Access code"
+              autocomplete="one-time-code"
+            />
+            <button class="btn" onclick="unlock(event)">Unlock</button>
           </div>
           <div id="err" class="err"></div>
+          <div id="log" class="log">&gt;&gt; ENTER ACCESS CODE TO INITIATE UPLINK…</div>
           <div class="stamp">CLEARANCE LEVEL: SCI &nbsp;•&nbsp; FILE: T is for TAROT_PROJECT</div>
         </div>
       </div>
-      <div class="meta">Don’t have the code? Request access: <a href="mailto:evans.jimw@gmail.com">evans.jimw@gmail.com</a></div>
+      <div class="meta">
+        Don’t have the code? Request access:
+        <a href="mailto:evans.jimw@gmail.com">evans.jimw@gmail.com</a>
+      </div>
     </div>
 
     <footer>© J. Evans — Prototype materials for private review only.</footer>
   </div>
 
+  <!-- flash overlay for unlock glitch -->
+  <div class="flash" id="flash"></div>
+
   <script>
-  // change this to your preferred password
-  const PASS = "PROBE";
+    // password
+    const PASS = "PROBE";
 
-  // INTRO video (your existing Vimeo cold open)
-  const INTRO_URL = "https://player.vimeo.com/video/1128635365?autoplay=1&muted=1&title=0&byline=0&portrait=0";
+    // your Vimeo intro
+    const VIDEO_URL =
+      "https://player.vimeo.com/video/1128635365?autoplay=1&muted=1&title=0&byline=0&portrait=0";
 
-  // Where to go AFTER the intro finishes (card tease page or second video)
-  // 👉 Replace this with your real URL when ready
-  const CARD_TEASE_URL = "https://example.com/card-tease"; 
+    const codeInput = document.getElementById('code');
+    const err = document.getElementById('err');
+    const log = document.getElementById('log');
+    const panel = document.getElementById('panel');
+    const flash = document.getElementById('flash');
 
-  const codeInput = document.getElementById('code');
-  const err = document.getElementById('err');
-  const KEY = "puscifer_unlock";
+    const KEY = "puscifer_unlock";
 
-  // if already unlocked before, go straight to video
-  if (localStorage.getItem(KEY) === "1") injectVideo();
-
-  // autofocus + Enter to submit
-  codeInput.focus();
-  codeInput.addEventListener('keyup', e => {
-    if (e.key === 'Enter') {
-      unlock(e);
-    }
-  });
-
-  function unlock(e){
-    if (e) e.preventDefault();
-    const v = codeInput.value.trim();
-    if (v.toUpperCase() === PASS){
-      localStorage.setItem(KEY,"1");
+    // if already unlocked, go straight to video
+    if (localStorage.getItem(KEY) === "1") {
       injectVideo();
-    } else {
-      err.textContent = "Access denied.";
-      setTimeout(()=> err.textContent = "", 2000);
     }
-  }
 
-  function injectVideo(){
-    const shell = document.getElementById('videoShell');
-
-    // drop in the INTRO video iframe
-    shell.innerHTML = `
-      <iframe
-        id="vimeoPlayer"
-        src="${INTRO_URL}"
-        title="Puscifer Tarot — Intro"
-        allow="autoplay; encrypted-media; fullscreen; picture-in-picture"
-        allowfullscreen
-        style="width:100%;height:100%;border:0;border-radius:12px;">
-      </iframe>
-    `;
-
-    const iframe = document.getElementById('vimeoPlayer');
-    const player = new Vimeo.Player(iframe);
-
-    // when the intro finishes, jump to the card tease
-    player.on('ended', () => {
-      window.location.href = CARD_TEASE_URL;
+    // autofocus + Enter to submit
+    codeInput.focus();
+    codeInput.addEventListener('keyup', e => {
+      if (e.key === 'Enter') {
+        unlock(e);
+      }
     });
-  }
-</script>
 
+    function unlock(e){
+      if (e) e.preventDefault();
+      const v = codeInput.value.trim();
+
+      if (v.toUpperCase() === PASS){
+        // log + flash
+        log.textContent = ">> ACCESS GRANTED. ESTABLISHING UPLINK…";
+        err.textContent = "";
+        localStorage.setItem(KEY,"1");
+
+        // quick CRT flash
+        flash.style.opacity = "1";
+        setTimeout(() => {
+          flash.style.opacity = "0";
+        }, 120);
+
+        injectVideo();
+      } else {
+        err.textContent = "ACCESS DENIED.";
+        log.textContent = ">> INVALID CODE. CHECK CLEARANCE AND RETRY.";
+        panel.classList.add('shake');
+        setTimeout(() => {
+          panel.classList.remove('shake');
+          err.textContent = "";
+        }, 550);
+      }
+    }
+
+    function injectVideo(){
+      const shell = document.getElementById('videoShell');
+      shell.innerHTML = `
+        <iframe
+          src="${VIDEO_URL}"
+          title="Puscifer Tarot — Intro"
+          allow="autoplay; encrypted-media; fullscreen; picture-in-picture"
+          allowfullscreen
+          style="width:100%;height:100%;border:0;border-radius:12px;">
+        </iframe>
+      `;
+    }
+  </script>
 </body>
 </html>
+
 
 
